--- a/amplaunch.html
+++ b/amplaunch.html
@@ -8,7 +8,7 @@
 	
 		function buildLaunchLink()
 		{
-			var g_strProjectId = "69C62dTziYg";
+			var g_strProjectId = "5qseNmxoIDn";
 			var strHash = document.location.hash;
 			document.location.hash = "";
 
